--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -8,10 +8,10 @@ Resources:
     Properties:
       Handler: index.handler
       Runtime: nodejs6.10
+      CodeUri: ./
       Events:
         MyTimeApi:
           Type: Api
           Properties:
             Path: /TimeResource
             Method: GET
-
